C2LC-333: Fixed alignment and width of key combos.

--- a/src/KeyboardInputModal.scss
+++ b/src/KeyboardInputModal.scss
@@ -29,6 +29,8 @@
     column-gap: 0.5rem;
     width: 100%;
     padding: 0.5rem;
+    font-size: 1.5rem;
+    height: 5rem;
 
     svg {
         width: 2rem;
@@ -95,7 +97,8 @@
 
 .KeyboardInputModal__binding {
     display: grid;
-    grid-template-columns: 6rem auto;
+    grid-template-columns: 7.5rem auto;
+    align-items: flex-start;
     column-gap: 1rem;
     row-gap: 1rem;
 }
@@ -108,15 +111,17 @@
 }
 
 .KeyboardInputModal__binding__icon {
-    border: 2px solid #B9BEC6;
-    background-color: white;
-    border-radius: 3px;
-    box-shadow: 0 3px 1px 0 #B9BEC6;
-    font-weight: bold;
+    border: 2px solid #B9BEC6;    
+    background-color: white;    
+    border-radius: 3px;    
+    box-shadow: 0 3px 1px 0 #B9BEC6;    
+    font-weight: bold;    
     height: 2.5rem;
-    padding-top: 0.25rem;
-    text-align: center;
     width: 2.5rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .KeyboardInputModal__content__footer {
